--- a/Batt_Pico_sdk/Battery_Software/CMakeLists.txt
+++ b/Batt_Pico_sdk/Battery_Software/CMakeLists.txt
@@ -12,5 +12,15 @@ target_include_directories(pct2075 PUBLIC lib)
 target_include_directories(pca9685 PUBLIC lib)
 target_include_directories(vl6180 PUBLIC lib)
 target_include_directories(ads1015 PUBLIC lib)
-target_include_directories(mcp25625 PUBLIC lib)
+target_include_directories(mcp2515 PUBLIC lib)
 target_include_directories(functions PUBLIC lib)
+
+add_executable(serial_input
+    main.c
+)
+
+target_link_libraries(serial_input
+    pico_stdlib
+)
+
+pico_enable_stdio_uart(serial_input 1)
