--- a/Batt_Pico_sdk/Battery_Software/CMakeLists.txt
+++ b/Batt_Pico_sdk/Battery_Software/CMakeLists.txt
@@ -14,3 +14,5 @@ target_include_directories(vl6180 PUBLIC lib)
 target_include_directories(ads1015 PUBLIC lib)
 target_include_directories(mcp25625 PUBLIC lib)
 target_include_directories(functions PUBLIC lib)
+
+pico_enable_stdio_usb(main 1)
